# qfuse_rp2040

./: .gitignore  CMakeLists.txt  README.md
src/: ICM42688.cpp  ICM42688.h  ICM42688.hpp  main.cpp
